# paperless-ai

./: .env.example  CLAUDE.md  README.md  main.py  project.md  pyproject.toml
.github/workflows/: lint.yml
categorizer/: engine.py
claude/: cli.py
config/: settings.py
llm/: __init__.py  base.py  claude.py  codex.py  factory.py  opencode.py
paperless/: client.py  models.py
